force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/leaseworks__Maintenance_Program_Event__c.object-meta.xml
<CustomObject>
    <description>The &quot;Maintenance Program Event&quot; section is designated for setting up specific Maintenance Events associated with each Assembly Type. Generally, it is recommended to track only significant events in this section – those that users wish to include in the Asset Specification sheet or are pertinent to Maintenance Reserve funds.
[MODULE: Asset]
[LOAD: Optional]
[PREREQUISITES: Maintenance Program]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Maintenance Program Event</label>
    <nameField>
        <displayFormat>MPE-{0000}</displayFormat>
        <label>MP Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Program Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>