force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly__c</fullName>
    <label>Assembly</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airframe</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Main</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Wing</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Nose</fullName>
            </value>
            <value>
                <fullName>Propeller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>