force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Clearance_Period_Critreia__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Clearance_Period_Critreia__c</fullName>
    <label>Clearance Period Critreia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Since Last</fullName>
                <default>true</default>
                <label>Since Last</label>
            </value>
            <value>
                <fullName>Remaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>