force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Current_Catalog_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Catalog_Year__c</fullName>
    <formula>leaseworks__Maintenance_Program__r.leaseworks__Current_Catalog_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Catalog Year</label>
    <type>Text</type>
</CustomField>