force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Event_Cost_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Cost_Source__c</fullName>
    <description>For information and reporting purposes, enter the source  where the Event Cost assumption is coming from: operator, OEM/manufacturer, consulting company, etc.</description>
    <inlineHelpText>For information and reporting purposes, enter the source  where the Event Cost assumption is coming from: operator, OEM/manufacturer, consulting company, etc.</inlineHelpText>
    <label>Event Cost Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Event_Cost_Source</valueSetName>
    </valueSet>
</CustomField>