force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Type__c</fullName>
    <label>Z_Unused Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heavy 1</fullName>
            </value>
            <value>
                <fullName>Heavy 2</fullName>
            </value>
            <value>
                <fullName>Heavy 3</fullName>
            </value>
            <value>
                <fullName>Heavy 4</fullName>
            </value>
            <value>
                <fullName>C-Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overhaul/Performance Restoration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>