force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Event_Type_Global__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Type_Global__c</fullName>
    <description>Type of the event. e.g. 4C/6Y, 8C/12Y</description>
    <inlineHelpText>Name of maintenance event (e.g. C-Check, 6Y-Check)</inlineHelpText>
    <label>Maintenance Event Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Assembly__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Event_Type_Global</valueSetName>
    </valueSet>
</CustomField>