force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Interval_2_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_2_Months__c</fullName>
    <label>Interval (Months)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>