force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Maintenance_Program__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Program__c</fullName>
    <label>Maintenance Program</label>
    <referenceTo>leaseworks__Maintenance_Program__c</referenceTo>
    <relationshipLabel>Maintenance Program Event</relationshipLabel>
    <relationshipName>Maintenance_Program_Event</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>