force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Manufacturer_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer_new__c</fullName>
    <description>A company that produces components or parts typically on a large scale.</description>
    <inlineHelpText>When manufacturer selected - the system will create a Projected Event for Assemblies with the same Manufacturer. If blank - this MPE will generate Projected Events for all Assemblies.</inlineHelpText>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Assembly__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Manufacturer_Global</valueSetName>
    </valueSet>
</CustomField>