force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Never_Exceed_Period_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Never_Exceed_Period_Hours__c</fullName>
    <label>Threshold (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>