force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/fields/leaseworks__Soft_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Soft_Time_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this will make existing Threshold and Interval as Soft time limit. The projected event can exceed the soft time limit and no warning status or overdue message will be shown.</description>
    <inlineHelpText>Checking this will make existing Threshold and Interval as Soft time limit. The projected event can exceed the soft time limit and no warning status or overdue message will be shown.</inlineHelpText>
    <label>Soft Time Limit</label>
    <type>Checkbox</type>
</CustomField>