force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__IntervalCyclesNotInDecimal.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__IntervalCyclesNotInDecimal</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(TEXT( leaseworks__Interval_2_Cycles__c ), &quot;[0-9]+[.]{1}[0-9]{1,}&quot;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Interval_2_Cycles__c</errorDisplayField>
    <errorMessage>Cycles shouldn&#39;t be a decimal.</errorMessage>
</ValidationRule>