force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__IntervalHoursGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__IntervalHoursGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Interval_2_Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Interval_2_Hours__c</errorDisplayField>
    <errorMessage>Please enter value greater than Zero.</errorMessage>
</ValidationRule>