force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__IntervalMonthsGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__IntervalMonthsGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Interval_2_Months__c &lt;=0</errorConditionFormula>
    <errorDisplayField>leaseworks__Interval_2_Months__c</errorDisplayField>
    <errorMessage>Please enter value greater than Zero.</errorMessage>
</ValidationRule>