force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__MPArchieveValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__MPArchieveValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(leaseworks__Maintenance_Program__r.leaseworks__Archive_Maintenance_Program__c=TRUE, OR(NOT(ISNEW()),ISNEW()) )</errorConditionFormula>
    <errorMessage>The Maintenance Program related to this event is Archived. Please Unarchive the Maintenance Program to edit the values .</errorMessage>
</ValidationRule>