force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__PrimaryUnitIntervalShouldBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PrimaryUnitIntervalShouldBePopulated</fullName>
    <active>true</active>
    <description>Primary Unit Interval should be populated for the selected Primary Unit</description>
    <errorConditionFormula>AND(!ISBLANK(TEXT(leaseworks__Primary_Unit__c)),(OR(AND(ISPICKVAL(leaseworks__Primary_Unit__c, &quot;Hours&quot;),ISBLANK(leaseworks__Interval_2_Hours__c )),AND(ISPICKVAL(leaseworks__Primary_Unit__c, &quot;Cycles&quot;),ISBLANK(leaseworks__Interval_2_Cycles__c )),AND(ISPICKVAL(leaseworks__Primary_Unit__c, &quot;Months&quot;),ISBLANK(leaseworks__Interval_2_Months__c)))))</errorConditionFormula>
    <errorMessage>Please enter Interval for the selected Primary Unit.</errorMessage>
</ValidationRule>