force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__ThresholdCyclesGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ThresholdCyclesGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Never_Exceed_Period_Cycles__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Never_Exceed_Period_Cycles__c</errorDisplayField>
    <errorMessage>Please enter value greater than Zero.</errorMessage>
</ValidationRule>