force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__ThresholdCyclesNotInDecimal.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ThresholdCyclesNotInDecimal</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(TEXT(  leaseworks__Never_Exceed_Period_Cycles__c  ), &quot;[0-9]+[.]{1}[0-9]{1,}&quot;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Never_Exceed_Period_Cycles__c</errorDisplayField>
    <errorMessage>Cycles shouldn&#39;t be a decimal.</errorMessage>
</ValidationRule>