force-app/main/default/objects/leaseworks__Maintenance_Program_Event__c/validationRules/leaseworks__ThresholdHoursGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ThresholdHoursGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Never_Exceed_Period_Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Never_Exceed_Period_Hours__c</errorDisplayField>
    <errorMessage>Please enter value greater than Zero.</errorMessage>
</ValidationRule>